fix add custom creative tab

--- a/src/main/resources/assets/limitedchests/lang/cs_CZ.json
+++ b/src/main/resources/assets/limitedchests/lang/cs_CZ.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.limitedchests.limitedchests": "Omezené Truhly (Limited Chests)",
+  "itemGroup.limitedchests": "Omezené Truhly (Limited Chests)",
 
   "item.limited_chest": "Omezená truhla",
 
