--- a/src/main/resources/assets/limitedchests/lang/en_US.json
+++ b/src/main/resources/assets/limitedchests/lang/en_US.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.limitedchests.limitedchests": "Limited Chests",
+  "itemGroup.limitedchests": "Limited Chests",
 
   "item.limitedchests.limited_chest": "Limited Chest",
 
