added "limited chest" as a block

--- a/src/main/resources/assets/limitedchests/lang/cs_CZ.json
+++ b/src/main/resources/assets/limitedchests/lang/cs_CZ.json
@@ -4,6 +4,8 @@
   "item.limitedchests.chest_limiter": "Omezovač truhel",
   "item.limitedchests.limited_chest": "Omezená truhla",
 
+  "block.limitedchests.limited_chest": "Omezená truhla",
+
   "tile.limitedchests.limited_chest": "Omezená truhla",
 
   "container.limitedchests.limited_chest": "Omezená truhla",
