--- a/src/main/resources/assets/limitedchests/lang/en_US.json
+++ b/src/main/resources/assets/limitedchests/lang/en_US.json
@@ -4,6 +4,8 @@
   "item.limitedchests.chest_limiter": "Chest limiter",
   "item.limitedchests.limited_chest": "Limited chest",
 
+  "block.limitedchests.limited_chest": "Limited chest",
+
   "tile.limitedchests.limited_chest": "Limited chest",
 
   "container.limitedchests.limited_chest": "Limited chest",
