--- a/src/main/resources/assets/limitedchests/lang/cs_CZ.json
+++ b/src/main/resources/assets/limitedchests/lang/cs_CZ.json
@@ -4,12 +4,14 @@
   "item.limitedchests.chest_limiter": "Omezovač truhel",
   "item.limitedchests.limited_chest": "Omezená truhla",
   "item.limitedchests.limited_furnace": "Omezená pec",
+  "item.limitedchests.limited_hopper": "Omezená násypka",
 
   "tooltip.limitedchests.hold_shift": "Podrž \u00A7eSHIFT\u00A7r pro více informací.",
   "tooltip.limitedchests.chest_limiter": "Použij znovu s omezeným předmětem pro zrušení omezení.",
 
   "block.limitedchests.limited_chest": "Omezená truhla",
   "block.limitedchests.limited_furnace": "Omezená pec",
+  "block.limitedchests.limited_hopper": "Omezená násypka",
 
   "tile.limitedchests.limited_chest": "Omezená truhla",
 
