--- a/src/main/resources/assets/limitedchests/lang/en_US.json
+++ b/src/main/resources/assets/limitedchests/lang/en_US.json
@@ -7,7 +7,7 @@
   "item.limitedchests.limited_hopper": "Limited hopper",
 
   "tooltip.limitedchests.hold_shift": "Hold \u00A7eSHIFT\u00A7r for more information.",
-  "tooltip.limitedchests.chest_limiter": "Craft again with a limited item to unlimit it.",
+  "tooltip.limitedchests.chest_limiter": "Craft again with a limited item to unlimit it.\nCrafting does not consume this item.",
 
   "block.limitedchests.limited_chest": "Limited chest",
   "block.limitedchests.limited_furnace": "Limited furnace",
