Add limited dropper WIP

--- a/src/main/resources/assets/limitedchests/lang/cs_CZ.json
+++ b/src/main/resources/assets/limitedchests/lang/cs_CZ.json
@@ -11,6 +11,7 @@
   "block.limitedchests.limited_chest": "Omezená truhla",
   "block.limitedchests.limited_furnace": "Omezená pec",
   "block.limitedchests.limited_hopper": "Omezená násypka",
+  "block.limitedchests.limited_dropper": "Omezený podavač",
 
   "tile.limitedchests.limited_chest": "Omezená truhla",
 
