--- a/src/main/resources/assets/limitedchests/lang/en_US.json
+++ b/src/main/resources/assets/limitedchests/lang/en_US.json
@@ -11,6 +11,7 @@
   "block.limitedchests.limited_chest": "Limited chest",
   "block.limitedchests.limited_furnace": "Limited furnace",
   "block.limitedchests.limited_hopper": "Limited hopper",
+  "block.limitedchests.limited_dropper": "Limited dropper",
 
   "tile.limitedchests.limited_chest": "Limited chest",
 
